--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
     <title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello World, I'm learning front-end development currently!</h1>
+<h1>Hello World, I'm learning front-end development!</h1>
 </body>
 </html>
